<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多媒体管理系统</string>
    <string name="firstcurrent">音乐</string>
    <string name="secondcurrent">视频</string>
    <string name="mediaplayer_menu_item">多媒体播放</string>
    <string name="remote_menu_item">遥控</string>
    <string name="settings_menu_item">设置</string>
    <string name="thirdcurrent">更多</string>
    <drawable name="shezhinormal">#ffffff</drawable>
    <drawable name="shezhipressed">#4169e1</drawable>
    <drawable name="zixunnormal">#ebebeb</drawable>
    <drawable name="zixunpressed">#bebebe</drawable>
    <drawable name="movienormal">#fafafa</drawable>
    <drawable name="moviepressed">#bebebe</drawable>
    <string name="inputIp">输入遥控器ip,如192.168.0.1</string>
    <string name="btnLED1On">打开LED1</string>
    <string name="btnLED1Off">关闭LED1</string>
    <string name="btnLED2On">打开LED2</string>
    <string name="btnLED2Off">关闭LED2</string>

    <string name="btnLED3On">打开继电器</string>
    <string name="btnLED3Off">关闭继电器</string>
    <string name="btnLED4On">开遥控</string>
    <string name="btnLED4Off">关遥控</string>
    <string name="btnBuzzOn">开蜂鸣器</string>
    <string name="btnBuzzOff">关蜂鸣器</string>
    <string name="btnRelayOn">开继电器</string>
    <string name="btnRelayOff">关继电器</string>
    <color name="red">#ff0000</color>
    <color name="green">#00ff00</color>
    <string name="bgtext">android wifi</string>
    <string name="ipnameaddr">请输入开发板IP地址</string>

    <string name="splash_des">splash image</string>
    <string name="tip">No devices, please make sure the devices are in the same wifi network, and retry later.</string>
</resources>
