<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@android:id/tabhost"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         tools:context=".Tabhostmain">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

        </FrameLayout>

        <View
            android:layout_width="fill_parent"
            android:background="#cfcfcf"
            android:layout_height="0.1dip"/>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            android:layout_weight="0.0"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="64dip"
            android:background="#fafafa"
            >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                android:gravity="bottom"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/main_tab_1"
                    style="@style/TabButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_choose_background"
                    android:checked="true"
                    android:text="@string/firstcurrent"
                    />

                <RadioButton
                    android:id="@+id/main_tab_2"
                    style="@style/TabButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_choose_background"
                    android:text="@string/secondcurrent"/>

                <RadioButton
                    android:id="@+id/main_tab_3"
                    style="@style/TabButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_choose_background"
                    android:text="@string/thirdcurrent"/>

            </RadioGroup>

        </FrameLayout>

    </LinearLayout>

</TabHost>